--- a/emails_dashboard.html
+++ b/emails_dashboard.html
@@ -69,7 +69,7 @@
       <h2>📧 مدیریت ایمیل‌ها</h2>
       <button onclick="loadPage('email_groups.html')">📂 دسته‌بندی ایمیل‌ها</button>
       <button onclick="loadPage('email_sources.html')">📋 منابع ایمیل‌ها</button>
-      <button onclick="loadPage('emails_bank.html')">📤 ارسال ایمیل دسته‌ای</button>
+      <button onclick="loadPage('New_EmailSender.html')">📤 ارسال ایمیل دسته‌ای</button>
       <button onclick="loadPage('single_send.html')">📧 ارسال ایمیل تکی</button>
       <button onclick="loadPage('email_template_editor.html')">🧩 مدیریت قالب‌ها</button>
     </aside>
@@ -86,6 +86,7 @@
   </script>
 </body>
 </html>
+
 
 
 
