--- a/New_EmailSender.html
+++ b/New_EmailSender.html
@@ -186,8 +186,8 @@
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm'
 
     // ✅ آدرس و کلید پروژه‌ات
-    const supabaseUrl = 'https://YOUR-PROJECT-REF.supabase.co'
-    const supabaseKey = 'YOUR-ANON-KEY'
+    const supabaseUrl = 'https://tdvimwqotnuvcdvhvbjj.supabase.co'
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE'
     const supabase = createClient(supabaseUrl, supabaseKey, { auth: { persistSession: false } })
 
     const tableName = 'iran_emails_bank'
@@ -355,3 +355,4 @@
   </script>
 </body>
 </html>
+
